--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -18,6 +18,15 @@ jobs:
       with:
         node-version: '10.x'
     - name: Install npm dependencies
-      run: npm run install
+      run: npm install
     - name: Run build task
       run: npm run build --if-present
+    - name: Deploy to Server
+      uses: easingthemes/ssh-deploy@v2.0.2
+      env:
+        SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
+        ARGS: "-rltgoDzvO --delete"
+        SOURCE: "dist/"
+        REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+        REMOTE_USER: ${{ secrets.REMOTE_USER }}
+        TARGET: ${{ secrets.REMOTE_TARGET }}    
