--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -13,10 +13,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Install Node.js
-      uses: actions/setup-node@v1
+    - uses: actions/setup-node@v1
       with:
-        node-version: '10.x'
+        node-version: '12.x'
+        registry-url: 'https://registry.npm.taobao.org'
     - name: Install npm dependencies
       run: npm install
     - name: Run build task
