--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -12,8 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
-    - uses: actions/setup-node@v1
+    - uses: actions/setup-node@master
       with:
         node-version: '12.x'
         registry-url: 'https://registry.npm.taobao.org'
