--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -12,20 +12,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/setup-node@master
+    - uses: actions/checkout@v1
+    - uses: actions/setup-node@v1
       with:
-        node-version: '12.x'
+        node-version: '12.13.1'
         registry-url: 'https://registry.npm.taobao.org'
     - name: Install npm dependencies
       run: npm install
     - name: Run build task
       run: npm run build --if-present
-    - name: Deploy to Server
-      uses: easingthemes/ssh-deploy@v2.0.2
-      env:
-        SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
-        ARGS: "-rltgoDzvO --delete"
-        SOURCE: "dist/"
-        REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
-        REMOTE_USER: ${{ secrets.REMOTE_USER }}
-        TARGET: ${{ secrets.REMOTE_TARGET }}    
