--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v1
     - uses: actions/setup-node@v1
       with:
-        node-version: '12.13.1'
+        node-version: '10.x'
         registry-url: 'https://registry.npm.taobao.org'
     - name: Install npm dependencies
       run: npm install
