--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Run build task
       run: npm run build --if-present
     - name: Deploy to Tencent Server 
-      uses: easingthemes/ssh-deploy@master
+      uses: HenryWong-fe/ssh-deploy@master
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
         ARGS: "-rltgoDzvO --delete"
