--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -21,7 +21,7 @@ jobs:
       run: npm install
     - name: Run build task
       run: npm run build --if-present
-    - name: Deploy to Tencent Server 
+    - name: Deploy to Tencent Server a
       uses: HenryWong-fe/ssh-deploy@master
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
