--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -22,10 +22,10 @@ jobs:
     - name: Run build task
       run: npm run build --if-present
     - name: Deploy File to Tencent Server
-      uses: HenryWong-fe/ssh-deploy@master
+      uses: easingthemes/ssh-deploy@v2.0.7
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
-        ARGS: "-rltgoDzvO --delete"
+        ARGS: "-avz --delete"
         SOURCE: "dist/"
         REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
         REMOTE_USER: ${{ secrets.REMOTE_USER }}
