--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -15,14 +15,14 @@ jobs:
     - uses: actions/checkout@v1
     - uses: actions/setup-node@v1
       with:
-        node-version: '10.x'
+        node-version: 10
         registry-url: 'https://registry.npm.taobao.org'
     - name: Install npm dependencies
       run: npm install
     - name: Run build task
       run: npm run build --if-present
     - name: Deploy File to Tencent Server
-      uses: easingthemes/ssh-deploy@v2.0.7
+      uses: HenryWong-fe/ssh-deploy@master
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
         ARGS: "-avz --delete"
