feat: 部署文件修改

--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Deploy File to Tencent Server
       uses: HenryWong-fe/ssh-deploy@master
       env:
-        SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
+        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         ARGS: "-avz --delete"
         SOURCE: "dist/"
         REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
