feat: 构建文件修改

--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -30,4 +30,5 @@ jobs:
         SOURCE: "dist/"
         REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
         REMOTE_USER: ${{ secrets.REMOTE_USER }}
-        TARGET: ${{ secrets.REMOTE_TARGET }}    
+        TARGET: ${{ secrets.REMOTE_TARGET }}
+        DEPLOY_KEY_NAME: "id_rsa"    
