--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -31,4 +31,4 @@ jobs:
         REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
         REMOTE_USER: ${{ secrets.REMOTE_USER }}
         TARGET: ${{ secrets.REMOTE_TARGET }}
-        DEPLOY_KEY_NAME: "id_rsa.pem"    
+        DEPLOY_KEY_NAME: "id_rsa"    
