--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Run build task
       run: npm run build --if-present
     - name: Deploy File to Tencent Server
-      uses: easingthemes/ssh-deploy@2.0.7
+      uses: easingthemes/ssh-deploy@v2.0.7
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         ARGS: "-avz --delete"
